Fixed a bug where the background wasn't scaling correctly on mobile.

--- a/public/css/fabdb.css
+++ b/public/css/fabdb.css
@@ -11405,11 +11405,11 @@ video {
   background:
         -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))),
         url('/img/background.jpg')
-        no-repeat center center fixed;
+        no-repeat top center fixed;
   background:
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
         url('/img/background.jpg')
-        no-repeat center center fixed;
+        no-repeat top center fixed;
 }
 
 .logo {
