--- a/resources/css/fabdb.css
+++ b/resources/css/fabdb.css
@@ -6,7 +6,7 @@
     background:
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
         url('/img/background.jpg')
-        no-repeat center center fixed;
+        no-repeat top center fixed;
 }
 
 .logo {
